<resources>
    <string name="app_name">外卖</string>
    <string name="main_fragment">main_fragment</string>
    <string name="title_film">影片</string>
    <string name="title_cinema">影院</string>
    <string name="cinema_empty">暂无影院</string>
    <string name="all_area">全城</string>
    <string name="all">全部</string>
    <string name="price_suffix">元起</string>
    <string name="discount_content">钱包新用户最高立减8元</string>
    <string name="tag_content">vip</string>
    <string name="search">搜索</string>
    <string name="search_hint_text">请输入商家/商品名称</string>
    <string name="search_hint_text_1">商家/商品</string>
    <string name="stroe_type_food">美食分类</string>
    <string name="stroe_type_flower">鲜花预订</string>
    <string name="stroe_type_cake">蛋糕预订</string>
    <string name="store_sort">综合排序</string>
    <string name="store_sales">销量</string>
    <string name="store_distance">距离</string>
    <string name="store_filter">筛选</string>
    <string name="search_history">历史记录</string>
    <string name="takeaway_home">外卖首页</string>
    <string name="takeaway_order">外卖订单</string>
    <string name="month_sale_num">月销%d笔</string>
    <string name="delivery_time">%d分钟 |</string>
    <string name="min_price">起送¥%.2f |</string>
    <string name="shipping_fee">配送¥%.2f |</string>
    <string name="min_price_s">起送¥%s</string>
    <string name="shipping_fee_s"> | 配送¥%s</string>
    <string name="average_price">  | %s</string>
    <string name="flower">鲜花</string>
    <string name="cake">蛋糕</string>
    <string name="takeaway">外卖</string>
    <string name="no_search_result_keyword">对不起，没有你想要的结果\n换个关键词试试看！</string>
    <string name="no_search_result_filter">抱歉，未能找到您搜索的商家或商店</string>
    <string name="no_search_result_position">抱歉，当前位置无外卖服务覆盖</string>
    <string name="store_status_break">门店休息中</string>
    <string name="store_status_busy">门店忙碌中</string>
    <string name="tips_earliest_delivery_time">现在预订，最早10:30开始配送</string>
    <string name="free_distribution">免费配送 |</string>
    <string name="this_keyword_is_complicated">这个关键词有点复杂</string>
    <string name="delete_history_title">删除搜索历史</string>
    <string name="delete_history_message">确定要删除所有搜索历史吗？</string>
    <string name="delete_history_cancel">取消</string>
    <string name="delete_history_ok">确定</string>
    <string name="supporting_invoices">支持开发票</string>
    <string name="ten">领</string>
    <string name="cash_coupon">代金券</string>
    <string name="feature_business">商家特色</string>
    <string name="new_bus">新商家</string>
    <string name="booking">跨天预订</string>
    <string name="exit_login_message">你确定要退出登录？</string>
    <string name="exit_login_cancel">取消</string>
    <string name="exit_login_ok">确定</string>
    <string name="ok">确定</string>
    <string name="reset">重置</string>
    <string name="no_more_data">暂无更多数据</string>
    <string name="distribution_situation">起送¥%1$s|配送¥%2$s|%3$s分钟送达</string>
    <string name="notice">公告：%1$s</string>
    <string name="discount">25减8 40减15</string>
    <string name="shopping_cart_is_empty">当前购物车为空快去选购吧！</string>
    <string name="confirmation_of_the_order">确认下单</string>
    <string name="popular_classification">热门分类</string>
    <string name="shop_details">店铺详情</string>
    <string name="kfc">肯德基</string>
    <string name="porridge">皮蛋瘦肉粥</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="chicken">推荐大鸡排</string>
    <string name="explain">大块鸡排，鲜嫩多汁，配上超多芝士和新鲜生菜</string>
    <string name="shop_cart">收起购物车</string>
    <string name="empty_all">清空购物车</string>
    <string name="please_add_to_the_shopping_cart_first">请先添加商品至购物车</string>
    <string name="please_select_the_specifications_first">您还未选择[规格类型],请选择后添加哦</string>
    <string name="specifications">选规格</string>
    <string name="specification">规格</string>
    <string name="already_reduced">已减</string>
    <string name="element">元</string>
    <string name="full">满</string>
    <string name="reduce">减</string>
    <string name="buy_again">再买</string>
    <string name="commodity_description">商品描述</string>
    <string name="distribution_fee">另需配送费¥%1$s</string>
    <string name="not_distribution">差%1$s元起送</string>
    <string name="no_product">未选购商品</string>
    <string name="can_not_order">%1$s起送</string>
    <string name="shop_close">本店打烊了</string>
    <string name="min_buy">%1$s份起购</string>
    <string name="looting">已抢光</string>
    <string name="not_buy_time">非可售时间</string>
    <string name="sold_out">已售完</string>
    <string name="first_arrive_time">商家现在接受预定,最早%1$s开始配送哦</string>
    <string name="limit_buy">限购%1$s份</string>
    <string name="limit_buy_toast">"折扣菜品限购%1$s份，超过%2$s份恢复原价"</string>
    <string name="loading">加载中...</string>
    <string name="net_error">当前网络不在状态，请稍后重试</string>
    <string name="open_the_shopping_cart">查看购物车</string>
    <string name="to_eat_position">点第%1$s个^我要吃第%1$s个^帮我点第%1$s个</string>
    <string name="to_eat_something">看下%1$s^我要吃%1$s^看一下%1$s</string>
    <string name="already_choice">好的，已为你选择该分类</string>
    <string name="cancel_position">取消第%1$s个^删除第%1$s个</string>
    <string name="already_cancel">好的，已删除</string>
    <string name="open">打开</string>
    <string name="already_clear_shop_cart">好的，已为你清空购物车</string>
    <string name="welcome_to_use_next_time">欢迎下次使用</string>
    <string name="tools_text_location">送至：未来科技大厦</string>
    <string name="tools_text_filter_type">商家特色</string>
    <string name="tools_text_filter_sub_type">免配送费</string>
    <string name="tools_text_history_name">肯德基</string>
    <string name="tools_text_store_name">肯德基宅急送</string>
    <string name="tools_text_status_desc">接受预订：10:30后起送</string>
    <string name="tools_text_average_price">人均¥25</string>
    <string-array name="tab_filters">
        <item>全城</item>
        <item>品牌</item>
        <item>筛选</item>
    </string-array>
    <string-array name="sort_type">
        <item>综合排序</item>
        <item>月销量从高到低</item>
        <item>配送速度从快到慢</item>
        <item>外卖评分从高到低</item>
        <item>起送价从低到高</item>
        <item>距离从近到远</item>
        <item>配送费从低到高</item>
        <item>人均从低到高</item>
        <item>人均从高到低</item>
    </string-array>
    <string name="goods_total_count">共%d件商品</string>
    <string name="one_more_order">再来一单</string>
    <string name="no_order">您暂无外卖订单，快来下单吧</string>
    <string name="order_cancelled">订单已取消</string>
    <string name="order_expired">订单已失效</string>
    <string name="cancel">取消</string>
    <string name="select_address">选择收货地址</string>
    <string name="select_arrive_time">选择送达时间</string>
    <string name="submit_order_title">提交订单</string>
    <string name="add_address">新增收货地址</string>
    <string name="network_anomaly">您的网络好像不太给力，请稍候再试</string>
    <string name="reload">重新加载</string>
    <string name="arrive_time">大约%s送达</string>
    <string name="choose_arrive_time">请选择配送时间</string>
    <string name="net_unconnect">您的网络好像不太给力，请稍后再试</string>
    <string name="delivery_immediately">立即送出</string>
    <string name="expected_delivery_immediately">立即送达</string>
    <string name="specify_time">指定时间</string>
    <string name="cost">\&#165;%1.1f</string>
    <string name="cost_text">\&#165;%s</string>
    <string name="total_cost">去支付\&#165;%1d</string>
    <string name="discount_exist"><Data><![CDATA[<b>已优惠</b><font color="#ff0000"><b>&#165;%1d</b></font>]]></Data></string>
    <string name="payment_summary">支付方式</string>
    <string name="payment">在线支付</string>
    <string name="packing_fee">包装费</string>
    <string name="shipping_fee_text">配送费</string>
    <string name="shipping_fee1_text">元配送费</string>
    <string name="delivery_type1_text">美团配送</string>
    <string name="delivery_type2_text">非美团配送</string>
    <string name="discount_prompt">满减优惠与折扣商品不能同时共享</string>
    <string name="count_char">\&#935;&#160;%1d</string>
    <string name="discount_text">折</string>
    <string name="to_pay_text">去支付</string>
    <string name="payment_header">支付订单</string>
    <string name="payment_success">支付成功</string>
    <string name="count_down_timer">剩余支付时间%6s</string>
    <string name="pay_amount">金额</string>
    <string name="pay_order_id">订单编号</string>
    <string name="pay_order_type">配送服务</string>
    <string name="order_meituan">美团专送</string>
    <string name="order_not_meituan">非美团专送</string>
    <string name="pay_shop_name">店铺名称</string>
    <string name="pay_hint">扫描完成支付</string>
    <string name="total">合计：</string>
    <string name="submit_total">%2.2f元</string>
    <string name="submit_discount">已优惠 \&#165;%s</string>
    <string name="actual_payment">实付：\&#165;%s</string>
    <string name="pay_title">支付超时</string>
    <string name="pay_time_out">支付超时,请重新下单。</string>
    <string name="choose_address_again">地址已删除，请重新选择地址</string>
    <string name="back_store">返回店铺</string>
    <string name="anew_submit">重新下单</string>
    <string name="complete">完成(%ds)</string>
    <string name="check_order_details">查看订单详情</string>
    <string name="product_info" formatted="false">%s等%d件商品</string>
    <string name="pay_succuess_address">配送地址</string>
    <string name="discount_money">\&#8722;\&#165;%s</string>
    <string name="order_preview_msg2">商家不可买</string>
    <string name="order_preview_msg3">菜品不可买</string>
    <string name="order_preview_msg4">不在配送时间内</string>
    <string name="order_preview_msg5">菜品未达起送金额</string>
    <string name="order_preview_msg15">未达到最小菜品起送份数</string>
    <string name="order_preview_msg20">缺少必选菜品</string>
    <string name="order_preview_msg26">商家不支持此配送类型</string>
    <string name="order_preview_msg29">库存不足</string>
    <string name="order_submit_msg8">该地址不在配送范围内，请重新选择</string>
    <string name="order_submit_msg9">超出配送范围，请重新选择</string>
    <string name="order_submit_msg10">目的地不在配送范围内,请重新选择</string>
    <string name="order_submit_error">订单提交失败</string>
    <string name="service_error">服务器异常</string>
    <string name="please_select_address">请选择配送地址</string>
    <string name="please_select_address_again">地址已被删除，请重新选择地址</string>
    <string name="address_select_title">我的收货地址</string>
    <string name="address_select_add_address">新增地址</string>
    <string name="address_sir">先生</string>
    <string name="address_lady">女士</string>
    <string name="address_destination">目的地</string>
    <string name="address_company">公司</string>
    <string name="address_home">家里</string>
    <string name="address_contact">联系人</string>
    <string name="address_phone">手机号</string>
    <string name="address_addr">收货地址</string>
    <string name="address_house_num">门牌号</string>
    <string name="address_tag">标签</string>
    <string name="address_tag_other">其他</string>
    <string name="address_edit_save">保存</string>
    <string name="address_search_hint">请输入您的收货地址</string>
    <string name="wuhan">武汉</string>
    <string name="persion_err1">打开“定位服务”来允许“外卖服务”</string>
    <string name="persion_err2">确定您的位置</string>
    <string name="settings">去开启</string>
    <string name="i_know">知道了</string>
    <string name="close">取消</string>
    <string name="order_details">订单详情</string>
    <string name="order_cancel">取消订单</string>
    <string name="order_cancel_title">现在取消订单吗?</string>
    <string name="order_cancel_message">退款将原路退回到您的支付账户</string>
    <string name="order_cancel_positive">再想想</string>
    <string name="remind_title">温馨提醒</string>
    <string name="remind_message">拨打电话:10109777取消订单吗？\n该订单需要联系美团客服取消</string>
    <string name="remind_phone">10109777</string>
    <string name="contact_meituan_title">联系美团客服</string>
    <string name="contact_meituan_message">是否拨打美团客服电话:10109777</string>
    <string name="order_pay_type1">货到付款</string>
    <string name="order_pay_type2">在线支付</string>
    <string name="waiting_to_pay">待支付</string>
    <string name="have_paid">已支付</string>
    <string name="pay_order">去支付</string>
    <string name="pay_done">已完成</string>
    <string name="pay_refunding">退款中</string>
    <string name="pay_refunded">已退款</string>
    <string name="pay_cancel">已取消</string>
    <string name="refund_fail">退款失败</string>
    <string name="address_suggestion_erro">抱歉，未能找到您搜索的地址，换个地址试试</string>
</resources>