<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/activity_address_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_contact" />

        <EditText
            android:id="@+id/address_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:lines="1" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#746b6b" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <RadioGroup
            android:id="@+id/address_edit_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/address_edit_sir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:padding="20dp"
                android:text="@string/address_sir" />

            <RadioButton
                android:id="@+id/address_edit_lady"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/address_lady" />
        </RadioGroup>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#746b6b" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_phone" />

        <EditText
            android:id="@+id/address_edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="phone" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#746b6b" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_addr" />

        <TextView
            android:id="@+id/address_edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#746b6b" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_house_num" />

        <EditText
            android:id="@+id/address_edit_house_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#746b6b" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/address_tag" />

        <com.baidu.iov.dueros.waimai.view.TagListView
            android:id="@+id/address_edit_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerWidth="20dp"
            app:textColor="#1f1fe9" />
    </LinearLayout>


    <Button
        android:id="@+id/address_edit_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_edit_save" />

</LinearLayout>