<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/gray_bg">

	<include layout="@layout/layout_header" />

	<!--store type-->
	<android.support.v7.widget.LinearLayoutCompat
		android:id="@+id/ll_type"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/rl_layout_header"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:orientation="horizontal">

		<android.support.v7.widget.AppCompatTextView
			android:id="@+id/tv_food"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="3dp"
			android:layout_marginRight="3dp"
			android:layout_weight="1"
			android:background="@drawable/shape_type_unselected_bg"
			android:gravity="center"
			android:padding="5dp"
			android:text="@string/stroe_type_food"
			android:textColor="@color/white"
			android:textSize="16sp" />

		<android.support.v7.widget.AppCompatTextView
			android:id="@+id/tv_flower"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="3dp"
			android:layout_marginRight="3dp"
			android:layout_weight="1"
			android:background="@drawable/shape_type_unselected_bg"
			android:gravity="center"
			android:padding="5dp"
			android:text="@string/stroe_type_flower"
			android:textColor="@color/white"
			android:textSize="16sp" />

		<android.support.v7.widget.AppCompatTextView
			android:id="@+id/tv_cake"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="3dp"
			android:layout_marginRight="3dp"
			android:layout_weight="1"
			android:background="@drawable/shape_type_unselected_bg"
			android:gravity="center"
			android:padding="5dp"
			android:text="@string/stroe_type_cake"
			android:textColor="@color/white"
			android:textSize="16sp" />

	</android.support.v7.widget.LinearLayoutCompat>

	<FrameLayout
		android:id="@+id/fragment_store_list"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@+id/ll_bottom"
		android:layout_below="@+id/ll_type" />

	<android.support.v7.widget.LinearLayoutCompat
		android:id="@+id/ll_bottom"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:visibility="visible">

		<android.support.v7.widget.AppCompatTextView
			android:id="@+id/tv_home"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@color/red"
			android:gravity="center"
			android:padding="5dp"
			android:text="@string/takeaway_home"
			android:textColor="@color/white"
			android:textSize="16sp" />

		<android.support.v7.widget.AppCompatTextView
			android:id="@+id/tv_order"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@color/gray"
			android:gravity="center"
			android:padding="5dp"
			android:text="@string/takeaway_order"
			android:textColor="@color/white"
			android:textSize="16sp" />

	</android.support.v7.widget.LinearLayoutCompat>

</RelativeLayout>
