<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical">

    <include layout="@layout/activity_address_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/location" />

        <TextView
            android:id="@+id/address_search_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/wuhan"
            android:textColor="@color/white" />

        <com.baidu.iov.dueros.waimai.view.ClearEditText
            android:id="@+id/address_search_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_search_hint"
            android:lines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white_88" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/address_search_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/address_search_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_suggestion_erro" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
