<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/white"
	android:paddingTop="10dp"
	android:paddingBottom="5dp">

	<android.support.v7.widget.LinearLayoutCompat
		android:id="@+id/ll_info"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<android.support.v7.widget.AppCompatTextView
			android:id="@+id/tv_store_index"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
			android:text="1"
			android:textSize="18sp" />

		<FrameLayout
			android:id="@+id/fl_img"
			android:layout_width="60dp"
			android:layout_height="60dp">

			<android.support.v7.widget.AppCompatImageView
				android:id="@+id/iv_store"
				android:layout_width="60dp"
				android:layout_height="60dp"
				tools:src="@mipmap/ic_launcher" />

			<android.support.v7.widget.AppCompatTextView
				android:id="@+id/tv_status_desc"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="bottom"
				android:background="@color/pop_window_bg"
				android:gravity="center_horizontal"
				android:text="@string/store_status_break"
				android:textColor="@color/white"
				android:textSize="16sp" />
		</FrameLayout>

		<LinearLayout
			android:id="@+id/ll_store_info"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_marginLeft="10dp"
			android:layout_toRightOf="@+id/fl_img"
			android:orientation="vertical">

			<android.support.v7.widget.AppCompatTextView
				android:id="@+id/tv_store_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/black"
				android:textSize="16sp"
				tools:text="@string/tools_text_store_name" />

			<android.support.v7.widget.LinearLayoutCompat
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:orientation="horizontal">

				<com.baidu.iov.dueros.waimai.view.RatingBar
					android:id="@+id/ratingBar"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_marginRight="5dp"
					app:starCount="5"
					app:starEmpty="@mipmap/rating_small_empty"
					app:starFill="@mipmap/rating_small_full"
					app:starHalf="@mipmap/rating_small_half"
					app:starImageSize="15dp"
					app:starPadding="1dp"
					app:starStep="3.5"
					app:stepSize="Half" />

				<android.support.v7.widget.AppCompatTextView
					android:id="@+id/tv_score"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_marginRight="5dp"
					android:gravity="center"
					android:textSize="14sp"
					tools:text="5.0" />

				<android.support.v7.widget.AppCompatTextView
					android:id="@+id/tv_sales"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_marginRight="5dp"
					android:gravity="center"
					android:textSize="14sp"
					tools:text="@string/month_sale_num" />

				<android.support.v7.widget.AppCompatTextView
					android:id="@+id/tv_time"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_marginRight="5dp"
					android:gravity="center"
					android:textSize="14sp"
					tools:text="@string/delivery_time" />

				<android.support.v7.widget.AppCompatTextView
					android:id="@+id/tv_distance"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_marginRight="5dp"
					android:gravity="center"
					android:textSize="14sp"
					tools:text="2.5km" />

			</android.support.v7.widget.LinearLayoutCompat>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:layout_toRightOf="@+id/iv_store"
				android:orientation="horizontal">

				<android.support.v7.widget.AppCompatTextView
					android:id="@+id/tv_min_price"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:textSize="14sp"
					tools:text="@string/min_price_s" />

				<android.support.v7.widget.AppCompatTextView
					android:id="@+id/tv_express_price"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:textSize="14sp"
					tools:text="@string/shipping_fee_s" />

				<android.support.v7.widget.AppCompatTextView
					android:id="@+id/tv_average_price"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:textSize="14sp"
					tools:text="@string/average_price" />

			</LinearLayout>

			<RelativeLayout
				android:id="@+id/rl_discount"
				android:layout_width="match_parent"
				android:layout_marginTop="3dp"
				android:layout_height="wrap_content">

				<android.support.v7.widget.RecyclerView
					android:id="@+id/rv_store_discount"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginRight="20dp"
					tools:listitem="@layout/item_store_discount" />

				<android.support.v7.widget.AppCompatImageView
					android:id="@+id/iv_store_discount"
					android:layout_width="wrap_content"
					android:paddingTop="5dp"
					android:paddingBottom="10dp"
					android:paddingLeft="10dp"
					android:paddingRight="10dp"
					android:layout_height="wrap_content"
					android:layout_alignParentEnd="true"
					android:src="@mipmap/arrow_down" />

			</RelativeLayout>

		</LinearLayout>

	</android.support.v7.widget.LinearLayoutCompat>

	<View
		android:id="@+id/view_mask_layer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignTop="@+id/ll_info"
		android:layout_alignBottom="@+id/ll_info"
		android:background="@color/translucence_bg"
		android:visibility="gone" />

</RelativeLayout>